--- a/package.json
+++ b/package.json
@@ -3,13 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.4.3",
+    "highcharts": "^10.2.0",
+    "highcharts-react-official": "^3.1.0",
     "react": "^18.2.0",
+    "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.2",
+    "react-icons": "^4.4.0",
+    "react-player": "^2.10.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scroll": "^1.8.7",
+    "react-simple-chatbot": "^0.6.1",
+    "react-slick": "^0.29.0",
+    "react-video-js-player": "^1.1.1",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.4.20",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
