--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^4.3.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -12,11 +13,13 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.4.3",
     "highcharts": "^10.2.0",
     "highcharts-react-official": "^3.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.2",
