--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.8.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -24,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.2",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "react-player": "^2.10.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
