--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@coreui/react": "^4.3.0",
+    "@coreui/react-chartjs": "^2.1.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -12,6 +13,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@visx/group": "^2.10.0",
+    "@visx/marker": "^2.11.1",
+    "@visx/mock-data": "^2.1.2",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.11.1",
+    "@visx/text": "^2.10.0",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
@@ -21,9 +28,12 @@
     "highcharts-react-official": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-chatbot-kit": "^2.1.0",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-fast-marquee": "^1.3.2",
+    "react-flippy": "^1.1.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-player": "^2.10.1",
