--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-slick": "^0.29.0",
     "react-video-js-player": "^1.1.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.20",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
